# amy

./: .gitignore  README.MD  amy.conf  howto_amy2  howto_install_AMY  howto_use_AMY
amyTesting/: log4cxx_config.xml
amyTesting/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
amy_arm/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
amy_client/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
amy_coms/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
amy_console/: log4cxx_config.xml
amy_console/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
amy_control/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml  (+1 more)
amy_db/: DB_AMY_schema.sql  DB_AMY_users.sql
amy_gui/: build.xml
amy_gui-Preloader/: build.xml
amy_main/: log4cxx_config.xml
jamy_coms/: build.xml
logging/: README  README_amy_logging  log4cxx_config_amy.xml  log4cxx_config_console.xml
ws_amy/src/ros_amy/: CMakeLists.txt  log4cxx_config.xml  package.xml
ws_amy/src/ros_amy/nbproject/: configurations.xml  project.xml
ws_amy/src/ros_amy/src/: RosAmyArm.cpp  RosAmyArm.h  UR5Arm.cpp  UR5Arm.h  YoubotArm.cpp  YoubotArm.h
(+803 files in other folders)
